syntax = "proto3";
package pt.tecnico.grpc;

message HelloRequest {
	string name = 1;
	repeated string hobbies = 2;
	// There are many more basics types, like Enum, Map
	// See https://developers.google.com/protocol-buffers/docs/proto3
	// for more information.
}

message HelloResponse {
	string greeting = 1;
}



message openAccountRequest{
	bytes publicKeyClient = 1;
	int32 sequenceNumber = 2;
	bytes hashMessage = 3;
}

message openAccountResponse{
	float balance = 1; 
}

message sendAmountRequest{
	bytes publicKeySender = 1;
	bytes publicKeyReceiver = 2;
	float amount = 3;
	int32 sequenceNumber = 4;
	bytes hashMessage = 5;
}

message sendAmountResponse{
	int32 transferId = 1;
}


service UserServerService {
	rpc greeting(HelloRequest) returns (HelloResponse);
	rpc openAccount(openAccountRequest) return (openAccountResponse);
	rpc sendAmount(sendAmountRequest) return (sendAmountResponse);
}